# my_cli_todolist

./: .gitignore  README.md
my_todo_list/: pyproject.toml
my_todo_list/todo/: main.py  task.py  todo_list.py
